fixing background color  bug on safari

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -83,8 +83,9 @@ a:link {
         z-index: 1;
         text-align: center;
         /* background-color: rgba(255,255,255, .15); */
-        background-color: rgba(12, 2, 51, 0.42);
+        /* background-color: rgba(12, 2, 51, 0.42); */
         /* background-color: rgba(1, 7, 8, 0.40); */
+        background: rgba(51,51,51,.5);
         margin-bottom: 3%;
     }
     h2{
